--- a/QrAuto/ShowCar.xaml
+++ b/QrAuto/ShowCar.xaml
@@ -4,8 +4,22 @@
              x:Class="QrAuto.ShowCar"
              Title="ShowCar">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
+        <Label x:Name="NameLabel"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" />
+        <Label x:Name="SerialNumberLabel"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" />
+        <Label x:Name="DepartmentLabel"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" />
+        <Label x:Name="PlateNumberLabel"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" />
+        <Label x:Name="PhaseStartLabel"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" />
+        <Label x:Name="PhaseNameLabel"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
