Added easier stack changes using pushasync

--- a/QrAuto/AddCar.xaml
+++ b/QrAuto/AddCar.xaml
@@ -17,9 +17,14 @@
         <Label Text="Department Address"/>
         <Entry x:Name="DepartmentAddressText"/>
 
+        
+
 
 
         <Button Text="Tilføj bil" x:Name="SendButton" Clicked="SendButton_Clicked"/>
+
+        <ActivityIndicator x:Name="Activity"/>
+
 
 
 
